--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta content="script-src 'self' blob:" http-equiv="Content-Security-Policy">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Vite App</title>
+  <title>Heart Signal</title>
+  <style>
+  </style>
 </head>
 <body>
 <div id="app"></div>
+<script src="./assets/iconfont.js"></script>
 <script src="./src/index.ts" type="module"></script>
 </body>
 </html>
